--- a/articles/postgresql/flexible-server/index.yml
+++ b/articles/postgresql/flexible-server/index.yml
@@ -4,17 +4,17 @@ summary: Azure Database for PostgreSQL - 灵活服务器（预览版）是完全
 metadata:
   title: Azure Database for PostgreSQL - 灵活服务器（预览版）
   description: Azure Database for PostgreSQL - 灵活服务器（预览版）是 Microsoft 云中的关系数据库服务，它专为开发人员而构建，由 PostgreSQL 社区版提供支持。
-  author: rachel-msft
-  ms.author: raagyema
+  author: sunilagarwal
+  ms.author: sunila
   ms.date: 09/22/2020
   ms.service: postgresql
   ms.topic: landing-page
-  ms.openlocfilehash: 7c214662a37083708b0a38148382e16b553145c4
-  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
+  ms.openlocfilehash: 215a34c7adcd9f5628bb164deecaf94d2b885b1d
+  ms.sourcegitcommit: 19dce034650c654b656f44aab44de0c7a8bd7efe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90928704"
+  ms.lasthandoff: 10/04/2020
+  ms.locfileid: "91710662"
 landingContent:
 - title: 关于灵活服务器（预览版）
   linkLists:
