--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -450,6 +450,8 @@
               href: how-to-enable-data-collection.md
             - name: 使用 Application Insights 进行监视
               href: how-to-enable-app-insights.md
+        - name: 借助 Triton 高性能地提供服务
+          href: how-to-deploy-with-triton.md
         - name: 连续部署模型
           displayName: ci cd azure devops models
           href: how-to-deploy-continuously-deploy.md
