--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -69,7 +69,7 @@
       href: ../../backup/security-baseline.md
     - name: Azure Cache for Redis 安全基线
       href: ../../azure-cache-for-redis/security-baseline.md
-    - name: Azure Cognitive Search 安全基线
+    - name: Azure 认知搜索安全基线
       href: ../../search/security-baseline.md
     - name: Azure Data Box 安全基线
       href: ../../databox/security-baseline.md
@@ -97,6 +97,8 @@
       href: ../../azure-functions/security-baseline.md
     - name: Azure IoT 中心安全基线
       href: ../../iot-hub/security-baseline.md
+    - name: Azure Kubernetes 服务安全基线
+      href: ../../aks/security-baseline.md
     - name: Azure 负载均衡器安全基线
       href: ../../load-balancer/security-baseline.md
     - name: Azure Monitor 安全基线
@@ -117,6 +119,8 @@
       href: ../../sql-database/security-baseline.md
     - name: Azure 存储安全基线
       href: ../../storage/common/security-baseline.md
+    - name: Azure 流量管理器安全基线
+      href: ../../traffic-manager/security-baseline.md
     - name: Batch 安全基线
       href: ../../batch/security-baseline.md
     - name: 认知服务的安全基线
@@ -163,3 +167,7 @@
       href: ../../virtual-machines/linux/security-baseline.md
     - name: 虚拟机 Windows 安全基线
       href: ../../virtual-machines/windows/security-baseline.md
+    - name: 虚拟网络安全基线
+      href: ../../virtual-network/security-baseline.md
+    - name: VPN 网关安全基线
+      href: ../../vpn-gateway/security-baseline.md
