--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 09/25/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 07d038aef43594550e81b640a8dfd98452804143
-  ms.sourcegitcommit: b48e8a62a63a6ea99812e0a2279b83102e082b61
+  ms.openlocfilehash: c97b00e1075785cae6b4c2a056f75a8c7481bca4
+  ms.sourcegitcommit: 638f326d02d108cf7e62e996adef32f2b2896fd5
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/28/2020
-  ms.locfileid: "91409778"
+  ms.lasthandoff: 10/05/2020
+  ms.locfileid: "91728829"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -450,7 +450,7 @@ productDirectory:
     - compute
     - web
     url: spring-cloud/index.yml
-  - title: Azure VMware 解决方案（预览）
+  - title: Azure VMware 解决方案
     summary: 在 Azure 上以原生方式运行 VMware 工作负载
     imageSrc: ./media/index/azure-vmware.svg
     azureCategories:
