--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -62,6 +62,8 @@
       href: disaster-recovery-for-virtual-machines.md
     - name: 通过内容库部署 VM
       href: tutorial-deploy-vm-content-library.md
+    - name: 设置 GitHub Enterprise Server
+      href: github-enterprise-server.md
     - name: Azure 本机集成
       items:
         - name: API 管理
@@ -84,6 +86,8 @@
       items:
         - name: 设置 vRealize Operations
           href: vrealize-operations-for-azure-vmware-solution.md
+        - name: 部署 VMware Horizon
+          href: azure-vmware-solution-horizon.md
 - name: 资源
   items:
     - name: 疑难解答
