--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -15,6 +15,9 @@
       href: fhir-paas-powershell-quickstart.md
     - name: 部署适用于 FHIR 的 Azure API - CLI
       href: fhir-paas-cli-quickstart.md
+    - name: 部署 Azure API for FHIR - ARM 模板
+      href: fhir-paas-arm-template-quickstart.md
+      displayName: deploy azure resource manager template
     - name: 部署适用于 Azure 的 FHIR Server - 门户
       href: fhir-oss-portal-quickstart.md
     - name: 部署适用于 Azure 的 FHIR Server - PowerShell
