--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -235,17 +235,23 @@
         - name: 使用 Resource Manager 模板
           displayName: arm
           href: how-to-create-workspace-template.md
-    - name: 创建计算资源
+    - name: 创建并管理计算资源
       items:
-        - name: 使用工作室
-          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority'
-          href: how-to-create-attach-compute-studio.md
-        - name: 使用 Python SDK
-          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority'
-          href: how-to-create-attach-compute-sdk.md
+        - name: 计算实例
+          displayName: compute target
+          href: how-to-create-manage-compute-instance.md
+        - name: 计算群集
+          displayName: 'compute target, low priority, managed identity'
+          href: how-to-create-attach-compute-cluster.md
         - name: Azure Kubernetes 服务
           displayName: 'AKS, inference'
           href: how-to-create-attach-kubernetes.md
+        - name: 附加自己的
+          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
+          href: how-to-attach-compute-targets.md
+        - name: 使用工作室
+          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority, managed identity'
+          href: how-to-create-attach-compute-studio.md
     - name: 设置你的环境
       items:
         - name: 设置开发环境
