--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -170,7 +170,7 @@
               href: vpn-gateway-howto-openvpn-clients.md
             - name: 从 SSTP 转移到 OpenVPN 协议或 IKEv2
               href: ikev2-openvpn-from-sstp.md
-        - name: 配置 P2S 会话管理
+        - name: P2S 会话管理
           href: p2s-session-management.md
         - name: 为 P2S 转换到公共 CA 网关证书
           href: vpn-gateway-point-to-site-gateway-public-ca.md
