--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -119,6 +119,8 @@
           href: troubleshoot-capacity-pools.md
         - name: 跨区域复制故障排除
           href: troubleshoot-cross-region-replication.md
+        - name: 双重协议卷故障排除
+          href: troubleshoot-dual-protocol-volumes.md
         - name: 快照策略问题故障排除
           href: troubleshoot-snapshot-policies.md
 - name: 参考
