--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -1064,6 +1064,8 @@
       items:
         - name: 迁移到 Java V4 SDK
           href: migrate-java-v4-sdk.md
+        - name: 迁移到 .NET V3 SDK
+          href: migrate-dotnet-v3.md
     - name: 疑难解答
       items:
         - name: 常见错误
