--- a/articles/cost-management-billing/index.yml
+++ b/articles/cost-management-billing/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Landing
 title: Azure 成本管理 + 计费文档
-summary: “Azure 成本管理 + 计费”可帮助你了解 Azure 计费、管理帐户和订阅、监视和控制 Azure 支出，并优化资源使用。 了解如何分析成本、创建和管理预算、导出数据，以及查看建议并根据建议采取措施。
+summary: “Azure 成本管理 + 计费”可帮助你了解 Azure 发票（帐单）、管理计费帐户和订阅、监视和控制 Azure 支出，并优化资源使用。 了解如何分析成本、创建和管理预算、导出数据，以及查看建议并根据建议采取措施。
 metadata:
   title: Azure 成本管理 + 计费
-  description: “Azure 成本管理 + 计费”可帮助你了解 Azure 计费、管理帐户和订阅、监视和控制 Azure 支出，并优化资源使用。 了解如何分析成本、创建和管理预算、导出数据，以及查看建议并根据建议采取措施。
+  description: “Azure 成本管理 + 计费”可帮助你了解 Azure 发票（帐单）、管理计费帐户和订阅、监视和控制 Azure 支出，并优化资源使用。 了解如何分析成本、创建和管理预算、导出数据，以及查看建议并根据建议采取措施。
   ms.service: cost-management-billing
   ms.subservice: common
   ms.topic: landing-page
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 08/20/2020
-  ms.openlocfilehash: d3fda9926d5e775dfcd4e36f4733c1e83daf709e
-  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
+  ms.date: 01/01/2020
+  ms.openlocfilehash: 3c570c0c258d93086c64c463c6fea3f3bb9bd741
+  ms.sourcegitcommit: b4f303f59bb04e3bae0739761a0eb7e974745bb7
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/25/2020
-  ms.locfileid: "91270808"
+  ms.lasthandoff: 10/02/2020
+  ms.locfileid: "91652153"
 landingContent:
 - title: 分析成本
   linkLists:
