--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -47,14 +47,18 @@
               href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 监视和故障排除
           items:
-            - name: 监视、诊断和故障排除
-              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: Azure Monitor 中的指标
-              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 迁移到新指标
+            - name: 从经典指标转换
               href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 存储分析指标（经典）
-              href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 监视（经典）
+              items:
+                - name: 存储分析
+                  href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+                - name: 指标
+                  href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+                - name: 日志
+                  href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+                - name: 监视、诊断和故障排除
+                  href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Azure 文件同步
       items:
         - name: 规划 Azure 文件同步部署
@@ -205,6 +209,8 @@
               href: ../../backup/manage-azure-file-share-rest-api.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 监视
       items:
+        - name: 监视 Azure 文件存储
+          href: storage-files-monitoring.md
         - name: 监视 Azure 文件同步
           href: storage-sync-files-monitoring.md
     - name: 迁移
@@ -291,6 +297,8 @@
   items:
     - name: Azure 文件存储参考
       href: ../files/reference.md
+    - name: 监视 Azure 文件存储参考
+      href: storage-files-monitoring-reference.md
     - name: 资源管理器模板
       displayName: arm
       href: /azure/templates/microsoft.storage/allversions
