--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -35,7 +35,7 @@
       href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Python
       href: ../common/storage-samples-python.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: JavaScript
+    - name: Javascript
       href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 其他语言
       href: ../common/storage-samples.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
@@ -98,24 +98,20 @@
       href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 监视和故障排除
       items:
-        - name: 故障排除教程
-          href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: 监视、诊断和故障排除
-          href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: 在 Azure 门户中进行监视
-          href: ../common/storage-monitor-storage-account.md??toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: 指标和日志记录
+        - name: 监视队列存储
+          href: monitor-queue-storage.md
+        - name: 从经典指标转换
+          href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: 监视（经典）
           items:
-            - name: Azure Monitor 中的指标
-              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: 迁移到新指标
-              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: 存储分析
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: 存储分析指标（经典）
+            - name: 指标
               href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: 存储分析日志
+            - name: 日志
               href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: 监视、诊断和故障排除
+              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
 - name: 如何
   items:
     - name: 创建和管理存储帐户
@@ -237,6 +233,10 @@
           href: storage-powershell-how-to-use-queues.md
         - name: 将 PowerShell 用于中国云、政府云和德国云
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: 监视（经典）
+          items:
+            - name: 在 Azure 门户中进行监视（经典）
+              href: ../common/storage-monitor-storage-account.md??toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 疑难解答
       items:
         - name: 延迟问题
@@ -245,6 +245,8 @@
   items:
     - name: Azure 队列存储参考
       href: ../queues/reference.md
+    - name: 监视 Azure 队列存储参考
+      href: monitor-queue-storage-reference.md
     - name: 资源管理器模板
       displayName: ARM
       href: /azure/templates/microsoft.storage/allversions
