--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -79,6 +79,8 @@
       href: table-storage-design-modeling.md
     - name: 表设计模式
       href: table-storage-design-patterns.md
+    - name: 监视表存储
+      href: monitor-table-storage.md
 - name: 操作说明
   items:
     - name: 创建存储帐户
@@ -172,6 +174,8 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
 - name: 参考
   items:
+    - name: 监视 Azure 表存储参考
+      href: monitor-table-storage-reference.md
     - name: 可伸缩性和性能目标
       items:
         - name: 表存储
