--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -103,8 +103,8 @@
           tocHref: /azure/app-service-mobile/
           topicHref: /azure/app-service-mobile/
     - name: Azure 自动管理
-      tocHref: /azure/automanage/
-      topicHref: /azure/automanage/
+      tocHref: 'https://azure.microsoft.com/services/azure-automanage/'
+      topicHref: 'https://azure.microsoft.com/services/azure-automanage/'
     - name: 静态 Web 应用
       tocHref: /azure/static-web-apps/
       topicHref: /azure/static-web-apps/
@@ -392,7 +392,7 @@
           topicHref: /azure/cognitive-services/LUIS/
         - name: 语言分析
           tocHref: /azure/cognitive-services/linguisticanalysisapi/
-          topicHref: /azure/cognitive-services/linguisticanalysisapi/home
+          topicHref: 'https://www.programmableweb.com/api/microsoft-cognitive-services-linguistic-analysis'
         - name: QnA Maker
           tocHref: /azure/cognitive-services/qnamaker/
           topicHref: /azure/cognitive-services/qnamaker/home
@@ -413,7 +413,7 @@
           topicHref: /azure/cognitive-services/video-indexer/video-indexer-overview
         - name: Web 语言模型
           tocHref: /azure/cognitive-services/web-language-model/
-          topicHref: /azure/cognitive-services/web-language-model/home
+          topicHref: 'https://www.programmableweb.com/sdk/microsoft-cognitive-services-web-language-model-c-sdk-microsoft'
         - name: 个性聊天
           tocHref: /azure/cognitive-services/project-personality-chat/
           topicHref: /azure/cognitive-services/qnamaker/overview/overview
