--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -165,6 +165,8 @@
               href: 'https://docs.microsoft.com/javascript/api/@azure/digital-twins/?view=azure-node-latest&preserve-view=true'
             - name: Java SDK - Maven
               href: 'https://search.maven.org/artifact/com.azure/azure-digitaltwins-core/1.0.0-beta.1/jar'
+            - name: Java SDK - 参考
+              href: 'https://docs.microsoft.com/java/api/overview/azure/digitaltwins/client?view=azure-java-preview&preserve-view=true'
     - name: 数字孪生 CLI
       items:
         - name: 数字孪生 CLI 参考
